--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <li class="tech-stack-list-item">CSS</li>
             <li class="tech-stack-list-item">JavaScript</li>
             <li class="tech-stack-list-item">React</li>
+            <li class="tech-stack-list-item">GitHub</li>
+            <li class="tech-stack-list-item">Git</li>
+            <li class="tech-stack-list-item">Next.js</li>
             <li class="tech-stack-list-item">mongoDB</li>
           </ul>
         </section>
