fix body divs for space between sections

--- a/index.html
+++ b/index.html
@@ -60,39 +60,42 @@
           </p>
         </section>
       </section>
-      <h2 class="socials-heading">Socials</h2>
-      <section class="socials">
-        <section class="github-card">
-          <section class="github">
-            <a href="https://github.com/sahedw"
-              ><img
-                src="/img/github.png"
-                alt="github"
-                width="85px"
-                class="github-picture"
-            /></a>
-            <h4 style="color: #dee4df">GitHub</h4>
+      <section class="socials-div">
+        <h2 class="socials-heading">Socials</h2>
+        <section class="socials">
+          <section class="github-card">
+            <section class="github">
+              <a href="https://github.com/sahedw"
+                ><img
+                  src="/img/github.png"
+                  alt="github"
+                  width="85px"
+                  class="github-picture"
+              /></a>
+              <h4 style="color: #dee4df">GitHub</h4>
+            </section>
           </section>
-        </section>
 
-        <section class="linkedin-card">
-          <section class="linkedin">
-            <a href="https://www.linkedin.com/in/sahed-wahedi-b4a723160/"
-              ><img src="/img/linkedin.png" alt="linkedin" width="85px"
-            /></a>
-            <h4 style="color: #dee4df">LinkedIn</h4>
+          <section class="linkedin-card">
+            <section class="linkedin">
+              <a href="https://www.linkedin.com/in/sahed-wahedi-b4a723160/"
+                ><img src="/img/linkedin.png" alt="linkedin" width="85px"
+              /></a>
+              <h4 style="color: #dee4df">LinkedIn</h4>
+            </section>
           </section>
-        </section>
 
-        <section class="xing-card">
-          <section class="xing">
-            <a href="https://www.xing.com/profile/Sahed_Wahedi/cv"
-              ><img src="/img/xing.png" alt="xing" width="85px"
-            /></a>
-            <h4 style="color: #dee4df">Xing</h4>
+          <section class="xing-card">
+            <section class="xing">
+              <a href="https://www.xing.com/profile/Sahed_Wahedi/cv"
+                ><img src="/img/xing.png" alt="xing" width="85px"
+              /></a>
+              <h4 style="color: #dee4df">Xing</h4>
+            </section>
           </section>
         </section>
       </section>
+
       <section class="education-work">
         <h2 class="edu-heading">Education and Work Experience</h2>
         <ul class="CV-year">
