add all needed navbar items

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <nav class="nav-bar">
       <ul class="nav-list">
-        <li><a href="/contact.html">Contact</a></li>
-        <li><a href="/biography.html">Biography</a></li>
+        <li><a href="/contact.html">About Me</a></li>
+        <li><a href="/biography.html">Tech & Interests</a></li>
+        <li><a href="/biography.html">Socials</a></li>
+        <li><a href="/biography.html">CV</a></li>
       </ul>
     </nav>
     <header class="header-div">
