add working links in navbar to jump to website section

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <body>
     <nav class="nav-bar">
       <ul class="nav-list">
-        <li><a href="/contact.html">About Me</a></li>
-        <li><a href="/biography.html">Tech & Interests</a></li>
-        <li><a href="/biography.html">Socials</a></li>
-        <li><a href="/biography.html">CV</a></li>
+        <li><a href="#header">About Me</a></li>
+        <li><a href="#tech_interests">Tech & Interests</a></li>
+        <li><a href="#socials">Socials</a></li>
+        <li><a href="#edu_work">CV</a></li>
       </ul>
     </nav>
-    <header class="header-div">
+    <header class="header-div" id="header">
       <section class="header-left">
         <h1>Sahed Wahedi</h1>
         <img
@@ -39,7 +39,7 @@
       </section>
     </header>
     <main class="main-div">
-      <section class="tech-and-interests">
+      <section class="tech-and-interests" id="tech_interests">
         <section class="tech-stack">
           <h2>Tech Stack</h2>
           <ul class="tech-stack-list">
@@ -62,7 +62,7 @@
           </p>
         </section>
       </section>
-      <section class="socials-div">
+      <section class="socials-div" id="socials">
         <h2 class="socials-heading">Socials</h2>
         <section class="socials">
           <section class="github-card">
@@ -98,7 +98,7 @@
         </section>
       </section>
 
-      <section class="education-work">
+      <section class="education-work" id="edu_work">
         <h2 class="edu-heading">Education and Work Experience</h2>
         <ul class="CV-year">
           <li>05/2023</li>
